--- a/res/values/base-strings.xml
+++ b/res/values/base-strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <resources>
-    <string name="app_name">YOLOv2</string>
-    <string name="activity_name_classification">YOLOv2</string>
+    <string name="app_name">Camsight</string>
+    <string name="activity_name_classification">Camsight</string>
     <string name="activity_name_detection">TF Detect</string>
     <string name="activity_name_stylize">TF Stylize</string>
 </resources>
